--- a/www/skins/dashboard/css/dashboard-main/tags.css
+++ b/www/skins/dashboard/css/dashboard-main/tags.css
@@ -156,7 +156,7 @@ pre {
     background: #f3f3f3;
     line-height: 1.5rem;
     white-space: pre-wrap;
-    padding: 1rem;
+    padding: 1rem 0;
     border-radius: 2.5px;
 }
 
